// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalFusionList /> should render a list of proposal merged from other proposal 1`] = `
<div>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <FormattedMessage
        id="proposal.fusionnedInto"
        values={
          Object {
            "num": 2,
          }
        }
      />
    </PanelHeading>
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <div
        key="proposal2"
      >
        <a
          href={true}
        >
          Title Proposal 2
        </a>
      </div>
      <div
        key="proposal3"
      >
        <a
          href={true}
        >
          Title Proposal 3
        </a>
      </div>
    </PanelBody>
  </Uncontrolled(Panel)>
</div>
`;

exports[`<ProposalFusionList /> should render a list of proposal of merged in other proposal 1`] = `
<div>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <FormattedMessage
        id="proposal.fusionnedFrom"
        values={
          Object {
            "num": 2,
          }
        }
      />
    </PanelHeading>
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <div
        key="proposal2"
      >
        <a
          href={true}
        >
          Title Proposal 2
        </a>
      </div>
      <div
        key="proposal3"
      >
        <a
          href={true}
        >
          Title Proposal 3
        </a>
      </div>
    </PanelBody>
  </Uncontrolled(Panel)>
</div>
`;
